--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd-mobile": "^2.2.9",
     "axios": "^0.18.0",
+    "better-scroll": "^1.15.1",
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
     "fastclick": "^1.0.6",
@@ -26,7 +27,7 @@
     "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -w"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "eslintConfig": {
     "extends": "react-app"
