--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cz-conventional-changelog": "^2.1.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "mockjs": "^1.0.1-beta3",
     "react-app-rewired": "^2.1.1"
   },
   "config": {
