--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-sticky": "^6.0.3",
+    "react-transition-group": "^4.0.0",
     "redux": "^4.0.1"
   },
   "scripts": {
